--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,11 @@
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
   </head>
+  
+  <script type="text/javascript" id="MathJax-script" async
+  src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+  </script>
+
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
 
