--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,14 @@
   <script type="text/javascript" id="MathJax-script" async
   src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
   </script>
+  
+  <script>
+  MathJax = {
+    tex: {
+      inlineMath: [['$', '$']]
+    }
+  };
+  </script>
 
   <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
