--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
     </header>
 
     <main id="content" class="main-content" role="main">
+      {{ page.date | date: "%Y-%b-%-d" }}
       {{ content }}
 
       <footer class="site-footer">
